# caf.space

./: .codecov.yml  .gitattributes  .gitignore  .readthedocs.yaml  CONTRIBUTING.rst  LICENSE  README.md  RELEASE.md  _run.py  conf.py  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test.yml  test_run.py  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: black.yml  build.yml  documentation-links.yml  linting.yml  release.yml  sphinx.yml  tests.yml
SAT_ITN_Comp/: .git-blame-ignore-revs  .gitignore  README.md  environment.bat  requirements.txt  todo.md
SAT_ITN_Comp/doc/source/: checking_outputs.md
SAT_ITN_Comp/src/: counts.py  filter.py  graphs.py  main.py  post_processing.py  routes.py  saturn_itn_lookup.py  utils.py
app/: README.md  app.py  requirements.txt
app/componants/: form_components.py  output_view.py
app/layouts/: __init_.py  main.py  tabs.py
app/styles/: __init__.py  css.py
docs/: base_conf.rst  conf.py  index.rst  input.rst  inputs.rst  requirements.txt  weighted_trans.rst  zone_trans.rst  zonesystem.rst
docs/source/: .gitignore  api.rst  base_config.rst  conf.py  index.rst  start.rst  user_guide.rst  weighted_trans.rst  zone_trans.rst
docs/source/_templates/autosummary/: class.rst  module.rst
docs/source/tutorial/: background.rst  index.rst  op_model.rst  weighted_trans.rst
docs/source/usage/: cli.rst  gui.rst  index.rst
examples/: GALLERY_HEADER.rst  example_config.yml  in_code_run.py  line_to_line.yml  merge_multilines.py  reverse_lines.py  weighted_run.py
examples/lower_zone/: lower_zone.dbf  lower_zone.shp  lower_zone.shx  weight.csv
examples/test_cache/zone_1_zone_2/: zone_1_to_zone_2_test_100.csv  zone_1_to_zone_2_test_100.yml
examples/zone_1/: zone_1.dbf  zone_1.shp
examples/zone_2/: point.dbf  point.shp  point.shx  pseudo_points.dbf  pseudo_points.shp  pseudo_points.shx  zone_2.dbf  zone_2.shp  zone_2.shx
src/caf/: test.yml
src/caf/space/: __init__.py  __main__.py  _version.py  config_base.py  geo_utils.py  inputs.py  line_to_line.py  metadata.py  point_to_point.py  ui.py  utils.py  weighted_funcs.py  zone_correspondence.py  zone_translation.py
src/caf/space/docs/source/: conf.py  zone_translation.rst
src/caf/space/early/: comp_zone.py  itn_filter.py  norms_weights.py  weighted_centroids.py
src/scripts/: comp_zone.py  example_config.yml  itn_filter.py  localisation.py
tests/: _test_example.py  _test_geo_utils.py  _test_zon_correspondence.py  conftest.py  scratch_6.py  shapes.py  test_example.py  test_geo_utils.py  test_weighted_funcs.py  test_zone_translation.py  tests_todo.txt  trial.csv
tests/NoHAM_LTB/NoHAM_2018/: NoHAM_2018.prj  NoHAM_2018_id.shx  link_LTB_spatial.csv
tests/outputs/: noham2018_lad21.csv  noham2018_lta.csv
