[build-system]
requires = ["setuptools>=64.0.0", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "caf.space"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "Easily generate translations between zoning systems"
readme = "README.md"
license = {"file"= "LICENSE"}
requires-python = ">=3.9"
authors = [
    { name = "Transport for the North" },
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
"Bug Tracker" = "https://github.com/Transport-for-the-North/caf.space/issues"
Homepage = "https://github.com/Transport-for-the-North/caf.space"
Source = "https://github.com/Transport-for-the-North/caf.space"
Documentation = "http://cafspace.rtfd.io/"

[tool.setuptools.dynamic]
dependencies = { "file" = "requirements.txt" }

[tool.setuptools.dynamic.optional-dependencies]
dev = { "file" = "requirements_dev.txt" }
docs = { "file" = "docs/requirements.txt" }

# Packaging options
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"caf.space" = ["py.typed"]

[project.scripts]
"caf.space" = "caf.space.__main__:main"

# Linters
[tool.black]
line-length = 95
target-version = ['py311']

[tool.pylint.messages_control]
disable = [
    "line-too-long",    # Compatibility with black
    "too-many-lines",
    "use-dict-literal",
    "use-list-literal",
    "import-error",
    "too-few-public-methods",
    "abstract-class-instantiated",
    "protected-access"
]

# Pylint settings
[tool.pylint.basic]
good-names = ["df", "fn", "ca", "tp", "to", "x", "i", "f", "q"]

[tool.pylint.main]
ignore = ["__init__.py", "_version.py", "inputs.py", "conf.py", "_run.py"]

[tool.pylint.design]
max-args = 10
max-attributes = 15
max-statements = 100

[tool.mypy]
packages = ["caf.space"]
ignore_missing_imports = true
allow_redefinition = true

[tool.pydocstyle]
convention = "numpy"
match = '(?!_test)(?!test_)(?!__init__)(?!ui).*\.py'
add-ignore = [
    "D202",    # Temporary compatibility with black
]

# Tests
[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=caf --cov-report=xml -n auto"

[tool.coverage.report]
include_namespace_packages = true

# Versioning
[tool.versioningit.vcs]
method = "git"
match = ["v*"]
default-tag = "0.0.1"

[tool.versioningit.onbuild]
source-file = "src/caf/space/_version.py"
build-file = "caf/space/_version.py"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"#

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

skip = ["__init__.py", "_version.py"]
skip_glob = [".*"]

# Section commenting
import_heading_stdlib = "Built-Ins"
import_heading_thirdparty = "Third Party"
import_heading_firstparty = "Local Imports"
