[metadata]
description =  Easily generate translations between transport zoning systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Transport-for-the-North/caf.space
author = Transport for the North
maintainer = Transport for the North
license = GPL-3.0
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
project_urls =
      Bug Tracker = https://github.com/Transport-for-the-North/caf.space/issues
      Source = https://github.com/Transport-for-the-North/caf.space
      Documentation = https://cafspcae.readthedocs.io/en/latest/

[options]
namespace_packages = caf
python_requires = >=3.9
install_requires =
    caf.toolkit>=0.1.3
    geopandas>=0.9
    fiona>=1.8
    shapely>=1.8
    numpy>=1.21
    pandas>=1.3
    pydantic>=1.10.2
    openpyxl>=3.0
    tkinterweb>=3.17

[options.extras_require]
testing =
    pytest~=7.1.2
    pytest-cov~=2.12.1
    pytest-xdist>=2.5.0
    mypy>=0.910
    mypy_extensions>=0.4.3
    pylint>=2.14.5
    pydocstyle>=6.1.1
    pydocstyle[toml]
    tox~=3.24.3

[options.package_data]
caf.{pacakge_name} = py.typed

[versioneer]
VCS = git
style = pep440-post
versionfile_source = src/caf/space/_version.py
versionfile_build = caf/space/_version.py
tag_prefix = v
